resources/ej2-base/releasenotes/WPF/Release-Notes/v18.1.0.52/DocIO.md
## DocIO

### Bug Fixes
{:#DocIO-bug-fixes}

* \#250042 - Paragraph style is now preserved properly while open and save the DOCX format Word document.
* \#267826 - Picture Watermark is now preserved properly while clone and merge the DOC format Word document.
* \#269662 - The **NullReferenceException** will no longer be thrown while closing the Word document.
* \#267398 - Table is now preserved properly while converting a Word document to PDF
* \#270030 - Bookmark is now preserved properly inside the Text content Control while open and save the DOCX format Word document.
* \#272560, \#266791 - List numbers are now preserved properly while open and save the DOCX format Word document.
* \#271175 - List type is now set properly while parsing the HTML file.
* \#271988 - The **NullReferenceException** will no longer be thrown while opening a DOCX format Word document.
* \#F152998 - BeforeClearGroupFieldEventArgs now returns the proper merge field names while performing Mail merge in a Word document.
* \#271634 - The **NullReferenceException** will no longer be thrown while saving a DOCX format Word document.
* \#271695, \#272438, \#272430 - The **NullReferenceException** will no longer be thrown while performing Mail merge in a Word document.
* \#273310 - Left indent is now preserved properly while converting an HTML file to Word document.
* \#272438, \#273336 - The **ArgumentOutOfRangeException** will no longer be thrown while converting a Word document to PDF.
* Table cell background color is now preserved properly while converting an HTML file to Word document.
* \#266244 - Text is now preserved with proper alignment while converting a Word document to PDF.
* \#268875, \#271698, \#274381 - Hanging issue has been resolved while converting a Word document to PDF.
* \#268875 - Picture is now preserved properly while converting a Word document to PDF.
* \#270030, \#271941 - Image is now preserved properly while converting a Word document to PDF.
* \#267958 - Text is now wrapped properly while converting a Word document to PDF.
* \#268928, \#273361 - Text is now preserved properly while converting a Word document to PDF.
* \#272436 - Font substitution event **OriginalFontName** property will not return **majorHAnsi** while converting a Word document to PDF.
* \#272754 - Textbox is now preserved properly while converting a Word document to PDF.
* \#F152680 - Text is now preserved properly while converting a Word document to PDF.
* \#271667 - The **NullReferenceException** will no longer be thrown while converting a Word document to PDF.
* \#271333 - Bullet list is now preserved properly while converting a Word document to PDF.
* \#263739, \#274914 - Text around the table is now wrapped properly while converting a Word document to PDF.
* \#F137285 - Image is now preserved properly while converting a Word document to PDF.
* \#274045 - Border is now preserved properly while converting a Word document to PDF.

